2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>

	* V01-12-01
	* reporting stop state to FU

2012-05-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-12-00
	* merging in new forking support from development branch

2012-04-22 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-11-00
	* support for master process fork in framework working thread
	* slightly safer waiting for scalers thread to lock (requires new
	  Processor tag)
	* timing statistics of beginRun

2011-10-14  William Tanenbaum <wmtan@fnal.gov>

	* tag V01-10-01
	* (also used V01-10-00)
	* Use "rawDataCollector" as module label of raw data
	* (instead of "source") to be consistent with MC
	* Use "LHC" as process name to avoid ambiguity.
	* Details in new DaqProvenanceHelper class in the framework.

2011-08-10  David Dagenhart <wdd@fnal.gov>

	* tag V01-09-21
	* adapt to small change in framework interface

2011-05-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-18
	* added monitoring of EOL usage 
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-17 (16 used by Bill)
	* align for 4_3_X

2011-04-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-15-01
	* fix wrongly tagged file in test

2011-04-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-15-00
	* disregard EOL signals which are out of line from standard sequence
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-15
	* xdata object back to xdaq application and use pointers here 

2011-02-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-14
	* more psindex fixes

2011-02-03  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-10
	* fix to psindex special handling

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-09
	* migration to xml buildfiles(07)
	* macosx mods (08)
	* fixes to prescale index(09)
	
2010-10-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-09-06
	* added simple web page to enable tests (go to stopping)
