@@ -1,3 +1,8 @@
+2012-07-07 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* V01-12-02
+	* align lumi and recover in case of lumi events not sequential in LS
+
 2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* V01-12-01
